--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -57,18 +57,13 @@ body {
   background-color:#333;
 }
 
-.bg{
-  background: url("../public/bg.jpg") no-repeat;
-  background-position: center;
-  background-size: cover;
-  height: 100vh;
-  transition: all .5s;
-}
-
 .bgi{
   background: url("../public/bgi.jpg") no-repeat;
   background-position: center;
   background-size: cover;
+  background-attachment: fixed; /* Set background attachment to fixed */
+  overflow-y: hidden;
+  width: 100%;
   height: 100vh;
   transition: all .5s;
 }
@@ -114,6 +109,6 @@ body {
   position: relative;
   z-index: 1; /* Ensure it's above the background image */
   overflow-y: auto;
-  height: 100vh; /* Adjust based on your layout */
+  height: 100%;
 }
 
