--- a/client/styles/search.css
+++ b/client/styles/search.css
@@ -3,7 +3,7 @@
   background: url('../public/search.jpg') no-repeat;
   background-position: center;
   background-size: cover;
-  height: 100vh;
+  height: 100%;
   overflow-y: auto;
 }
 
